--- a/app/assets/stylesheets/frontend.scss
+++ b/app/assets/stylesheets/frontend.scss
@@ -1,168 +1,16 @@
 @charset "UTF-8";
 
+//mixins
+@import "veracity";
+
 @import "fonts";
+@import "base";
+@import "nav";
+
+// layout
 @import "layout";
 @import "responsive-components";
-@import "nav";
-@import "veracity";
 
 // identify & remove
 @import "obsolete";
-
-html,
-body {
-  margin: 0;
-  padding: 0;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-a {
-  color: var(--orange);
-}
-
-footer {
-  padding: 1rem;
-}
-
-h1 {
-  font-size: var(--large-typesize);
-  margin: 2rem 0 0;
-}
-
-h2 {
-  font-size: var(--medium-typesize);
-  margin: 2rem 0 0;
-}
-
-h1 a,
-h2 a {
-  text-decoration: none;
-}
-
-p {
-  margin: 0 0 1rem;
-}
-
-p,
-li,
-blockquote,
-h3,
-h4 {
-  //color: var(--violet);
-  font-size: var(--small-typesize);
-  line-height: 1.6;
-}
-
-figure {
-  margin: 0;
-}
-
-header h1 img {
-  max-width: 250px;
-}
-
-.box {
-  margin: 0 -2rem;
-  padding: 2rem;
-}
-
-.organizations img {
-  max-width: 135px;
-  max-height: 70px;
-  margin: 0px 30px 50px 0;
-}
-
-[data-theme="dark"] {
-  color: var(--white);
-  background-color: var(--dark-gray);
-
-  p,
-  li,
-  blockquote,
-  h3,
-  h4 {
-    //color: var(--white);
-  }
-}
-
-.speaker-stats {
-  clear: left;
-  margin: 0 0 1rem;
-
-  .speaker {
-    .name {
-      margin: 0 0 0 75px;
-      padding-top: 2px;
-      font-size: 20px;
-    }
-
-    .photo-wrapper {
-      width: 60px;
-      height: 60px;
-      float: left;
-    }
-  }
-
-  .stats {
-    margin: -2px 0 2.5em 75px;
-    font-weight: bold;
-    font-size: 20px;
-
-    li {
-      list-style: none;
-      margin-right: 10px;
-      float: left;
-
-      @include veracity;
-    }
-
-    .none {
-      color: #ddd !important;
-    }
-
-    .none::before {
-      background-color: #ddd !important;
-    }
-  }
-}
-
-
-:root {
-  /* ci colors */
-  --blue: #0060ff;
-  --violet: #3c325c;
-  --orange: #f26538;
-  --white: #f4f9fd;
-  --light-gray: #d0d3e8;
-  --dark-gray: #282828;
-
-  /* grays */
-  --silver: #eee;
-  --aluminum: #999;
-  --jumbo: #888;
-  --steel: #666;
-
-  /* veracity */
-  --true: var(--blue);
-  --untrue: #eb1d2b;
-  --misleading: #ffba00;
-  --unverifiable: #9dbaeb;
-
-  /* font */
-  --font-family: Lato, sans-serif;
-  --normal-typesize: 16px;
-  --medium-typesize: 20px;
-  --large-typesize: 24px;
-
-  /* grid */
-  --gutter: 50px;
-
-  /* root props */
-  font-size: var(--normal-typesize);
-  font-family: var(--font-family);
-  color: var(--violet);
-  background-color: var(--white);
-}
-
 
