--- a/app/views/statement/_small.html.erb
+++ b/app/views/statement/_small.html.erb
@@ -1,20 +1,17 @@
-<div class="statement preview">
-  <span class="veracity <%= statement.correct_assessment.veracity.default_name %>"></span>
+<div class="statement-preview">
+  <%= render(partial: 'shared/portrait', object: statement.speaker, as: :speaker) %>
   
-  <div class="photo-wrapper">
-    <img class="lazy-load" data-src="<%= speaker_portrait(statement.speaker.portrait) %>" alt="<%= statement.speaker.full_name %>">
-  </div>
-
-  <figure class="speaker">
+  <div>
     <p class="name">
+      <span class="veracity <%= statement.correct_assessment.veracity.default_name %>"></span>
       <a href="<%= speaker_path(statement.speaker.id) %>">
         <%= statement.speaker.full_name %>
       </a>
     </p>
-  </figure>
-
-  <p>
-    <span class="quote">„<%= statement.content.truncate(250) %>“</span>
-    <a href="<%= statement_path(statement.id) %>">odůvodnění&nbsp;&rarr;</a>
-  </p>
+    
+    <p>
+      <span class="quote">„<%= statement.content.truncate(250) %>“</span>
+      <a href="<%= statement_path(statement.id) %>">odůvodnění&nbsp;&rarr;</a>
+    </p>
+  </div>
 </div>
