--- a/app/views/article/_preview.html.erb
+++ b/app/views/article/_preview.html.erb
@@ -34,9 +34,9 @@
         <div class="large-8 medium-9 columns">
             <div class="speakers">
                 <% for speaker in article.unique_speakers %>
-                    <% if speaker.portrait %>
+                    <% if speaker.avatar.attached? %>
                         <div class="photo-wrapper" title="<%= speaker.full_name %>">
-                          <img class="lazy-load" data-src="<%= speaker_portrait(speaker.portrait) %>">
+                          <img class="lazy-load" data-src="<%= speaker.avatar %>">
                         </div>
                     <% end %>
                 <% end %>
