--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -31,7 +31,7 @@
 %>
 
 <nav id="main-menu" role="navigation">
-  <label for="tm" id="toggle-menu">Menu <span class="drop-icon">▾</span></label>
+  <label for="tm" id="toggle-menu">Menu <span class="drop-icon">☰</span></label>
   <input type="checkbox" id="tm">
   <ul>
     <% @nav.each_with_index do |submenu, index| %>
