--- a/app/assets/stylesheets/_veracity.scss
+++ b/app/assets/stylesheets/_veracity.scss
@@ -5,6 +5,10 @@
   white-space: nowrap;
   font-weight: bold;
 
+  .hidden {
+    display: none;
+  }
+
   &::before {
     content: '';
     display: inline-block;
