--- a/app/views/speaker/_listed.html.erb
+++ b/app/views/speaker/_listed.html.erb
@@ -1,7 +1,14 @@
-<article class="speaker">
-  <a href="<%= speaker_path(speaker) %>">
-    <%= render(partial: 'shared/portrait', object: speaker, as: :speaker) %>
+ <a class="speaker" href="<%= speaker_path(speaker) %>">
+  <%= render(partial: 'shared/portrait', object: speaker, as: :speaker) %>
+  <div>
     <p class="name"><%= speaker.full_name %></p>
-    <p><%= speaker.published_statements.size %> výroků</p>
-  </a>
-</article>
+    <p>
+      <% if showLatest %>
+        <b><%= speaker.published_statements.where("excerpted_at >= ?", 6.months.ago).count %>&nbsp;výroků</b>
+        (<%= speaker.published_statements.count %>&nbsp;celkem)
+      <% else %>
+        <%= speaker.published_statements.count %>&nbsp;výroků
+      <% end %>
+    </p>
+  </div>
+</a>
