--- a/app/views/speaker/_sidebar.html.erb
+++ b/app/views/speaker/_sidebar.html.erb
@@ -4,6 +4,7 @@
   <%= link_to("Řečníci s nejvíce výroky", speakers_path()) %>
 </p>
 
+<nav>
 <h3>Politické strany</h3>
 <ul>
   <% @parties.each do |party| %>
@@ -15,3 +16,4 @@
   <li><a href="">Ostatní strany</a></li>
   %>
 </ul>
+</nav>
