Social embeds lazy loading

--- a/app/assets/stylesheets/_layout.scss
+++ b/app/assets/stylesheets/_layout.scss
@@ -19,6 +19,10 @@
   article.preview img {
     display: none;
   }
+
+  #twitter, #facebook {
+    display: none;
+  }
 }
 
 @media (min-width: 900px) {
